# tiktok_edits

./: .gitignore  Makefile  README.md  check_ffmpeg.py  main.py  pyproject.toml
agents/: executor.py  orchestrator.py
content_download/: audio.py  clips.py
output/clips/: 901o9QSXqAA.f140.m4a  X9q51bdNR3M.f140.m4a  c1rBk7XAlj0.f258.m4a  flxZd7EFhSo.f140.m4a
tools/: audio_segment_selector.py  clip_classifier.py  content_gatherer.py  tiktok_scraper.py  video_editor.py
trend_discovery/: anilist.py  discovery.py  kitsu.py  scoring.py  utils.py  youtube.py
video_making/: beat_detector.py  legacy_editor.py  orchestrator.py
