[project]
name = "tiktok-edits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "TikTokApi",
    "google-api-python-client",
    "requests",
    "imageio-ffmpeg",
    "moviepy",
    "yt-dlp",
    "numpy",
    "opencv-python",
    "google-adk",
]
